@@ -260,10 +260,7 @@ class TestViewConfigDecorator(unittest.TestCase):
 
     def test_create_defaults(self):
         decorator = self._makeOne()
-        self.assertEqual(decorator.name, '')
-        self.assertEqual(decorator.request_type, None)
-        self.assertEqual(decorator.context, None)
-        self.assertEqual(decorator.permission, None)
+        self.assertEqual(decorator.__dict__, {})
 
     def test_create_context_trumps_for(self):
         decorator = self._makeOne(context='123', for_='456')
@@ -274,9 +271,11 @@ class TestViewConfigDecorator(unittest.TestCase):
         self.assertEqual(decorator.context, '456')
         
     def test_create_nondefaults(self):
-        decorator = self._makeOne(name=None, request_type=None, for_=None,
-                                  permission='foo', mapper='mapper',
-                                  decorator='decorator', match_param='match_param')
+        decorator = self._makeOne(
+            name=None, request_type=None, for_=None,
+            permission='foo', mapper='mapper',
+            decorator='decorator', match_param='match_param'
+            )
         self.assertEqual(decorator.name, None)
         self.assertEqual(decorator.request_type, None)
         self.assertEqual(decorator.context, None)
@@ -295,9 +294,11 @@ class TestViewConfigDecorator(unittest.TestCase):
         config = call_venusian(venusian)
         settings = config.settings
         self.assertEqual(len(settings), 1)
-        self.assertEqual(settings[0]['permission'], None)
-        self.assertEqual(settings[0]['context'], None)
-        self.assertEqual(settings[0]['request_type'], None)
+        self.assertEqual(len(settings), 1)
+        self.assertEqual(len(settings[0]), 3)
+        self.assertEqual(settings[0]['venusian'], venusian)
+        self.assertEqual(settings[0]['view'], None) # comes from call_venusian
+        self.assertEqual(settings[0]['_info'], 'codeinfo')
 
     def test_call_class(self):
         decorator = self._makeOne()
@@ -310,10 +311,11 @@ class TestViewConfigDecorator(unittest.TestCase):
         config = call_venusian(venusian)
         settings = config.settings
         self.assertEqual(len(settings), 1)
-        self.assertEqual(settings[0]['permission'], None)
-        self.assertEqual(settings[0]['context'], None)
-        self.assertEqual(settings[0]['request_type'], None)
+        self.assertEqual(len(settings[0]), 4)
+        self.assertEqual(settings[0]['venusian'], venusian)
+        self.assertEqual(settings[0]['view'], None) # comes from call_venusian
         self.assertEqual(settings[0]['attr'], 'foo')
+        self.assertEqual(settings[0]['_info'], 'codeinfo')
 
     def test_call_class_attr_already_set(self):
         decorator = self._makeOne(attr='abc')
@@ -326,10 +328,11 @@ class TestViewConfigDecorator(unittest.TestCase):
         config = call_venusian(venusian)
         settings = config.settings
         self.assertEqual(len(settings), 1)
-        self.assertEqual(settings[0]['permission'], None)
-        self.assertEqual(settings[0]['context'], None)
-        self.assertEqual(settings[0]['request_type'], None)
+        self.assertEqual(len(settings[0]), 4)
+        self.assertEqual(settings[0]['venusian'], venusian)
+        self.assertEqual(settings[0]['view'], None) # comes from call_venusian
         self.assertEqual(settings[0]['attr'], 'abc')
+        self.assertEqual(settings[0]['_info'], 'codeinfo')
 
     def test_stacking(self):
         decorator1 = self._makeOne(name='1')
@@ -593,7 +596,7 @@ class Test_view_defaults(unittest.TestCase):
         @view_defaults(route_name='ghi')
         class Bar(Foo): pass
         self.assertEqual(Bar.__view_defaults__['route_name'],'ghi')
-        self.assertEqual(Bar.__view_defaults__['renderer'], None)
+        self.assertFalse('renderer' in Bar.__view_defaults__)
 
     def test_it_inheritance_overriden_empty(self):
         from pyramid.view import view_defaults
@@ -601,8 +604,7 @@ class Test_view_defaults(unittest.TestCase):
         class Foo(object): pass
         @view_defaults()
         class Bar(Foo): pass
-        self.assertEqual(Bar.__view_defaults__['route_name'], None)
-        self.assertEqual(Bar.__view_defaults__['renderer'], None)
+        self.assertEqual(Bar.__view_defaults__, {})
 
 class ExceptionResponse(Exception):
     status = '404 Not Found'
