@@ -1,3 +1,13 @@
+Next release
+============
+
+Bug Fixes
+---------
+
+- The ``pyramid.view.view_defaults`` decorator did not work properly when
+  more than one view relied on the defaults being different for configuration
+  conflict resolution.  See https://github.com/Pylons/pyramid/issues/394.
+
 1.3a4 (2012-01-05)
 ==================
 
